apps/actualbudget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actualbudget
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: actualbudget
    pod-security.kubernetes.io/warn: restricted
