apps/actualbudget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app.kubernetes.io/name: actualbudget
spec:
  selector:
    app.kubernetes.io/name: actualbudget
  ports:
    - name: http
      port: 5006
      targetPort: http
